style(ContactUsArea): Qa changes, removed tab index, fixed style on mobile

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_contactUsArea.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_contactUsArea.scss
@@ -109,8 +109,4 @@ a:hover {
 .contact-us-area-primary {
     padding-left: 10px;
     margin-right: -5px;
-
-    @media #{$mobile} {
-        margin-right: -25px;
-    }
     }
